--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,18 +8,19 @@ dependencies = [
   "ipython>=9.5.0",
   "langchain>=0.3.27",
   "langchain-community>=0.3.29",
+  "langchain-openai>=0.3.33",
   "langgraph>=0.6.6",
   "llama-cpp-python>=0.3.16",
   #
   "gradio>=5.44.1",
   #
   "httpx>=0.28.1",
-  "langchain>=0.3.27",
   "qdrant-client>=1.15.1",
   "sentence-transformers>=5.1.0",
   #
   "asyncio>=4.0.0",
   "anyio>=4.9.0",
+  "textblob>=0.19.0",
 ]
 
 [build-system]
