--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ dependencies = [
   "markdown>=3.9",
   "lmstudio>=1.5.0",
   "langchain-qdrant>=0.2.1",
+  # scripts
+  "aioboto3>=15.4.0",
+  "minio>=7.2.18",
 ]
 
 [build-system]
