--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,9 @@ dependencies = [
   "progressbar2>=4.5.0",
   "tqdm>=4.67.1",
   "tabulate>=0.9.0",
+  "psycopg[binary]>=3.3.2",
+  "elasticsearch[async]>=9.2.0",
+  "opensearch-py>=3.1.0",
 ]
 
 [build-system]
